syntax = "proto3";

package io.vinicius.banking.grpc;
option java_multiple_files = true;

import "transaction_model.proto";

message MutateTransaction {
    uint32 account_id = 1;
    io.vinicius.banking.proto.TransactionType type = 2;
    string amount = 3;
    optional int32 destination_account_id = 4;
    optional string message = 5;
}

message QueryTransaction {
    int32 accountId = 1;
}

service TransactionService {
    rpc Create(MutateTransaction) returns (io.vinicius.banking.proto.Transaction);
    rpc Retrieve(QueryTransaction) returns (io.vinicius.banking.proto.TransactionList);
}